gccida/g1/reg_bitfield_target_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12510:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)body->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12513:15: error: expected expression
rtx = *( rtx *)( v4.rtwint + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12520:15: error: expected expression
rtx = *( rtx *)( *( _QWORD *)( v4.rtwint + 8) + 8LL); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12538:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)rtx + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12561:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)x + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/combine.c:12600:44: error: expected expression
result = reg_bitfield_target_p( x, *( rtx *)&rtwint[2 * v18 + 2]); 
                                           ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reg_bitfield_target_p/src/obj/combine.o] Error 1
